--- a/TowerDefence/TowerDefence.csproj
+++ b/TowerDefence/TowerDefence.csproj
@@ -62,6 +62,10 @@
     <Compile Include="Model\AttackingEntity_Should.cs" />
     <Compile Include="Model\Map.cs" />
     <Compile Include="Model\Map_should.cs" />
+    <Compile Include="Model\SinglyLinkedList.cs" />
+    <Compile Include="Model\TowerEntity.cs" />
+    <Compile Include="Model\WideSearch.cs" />
+    <Compile Include="Model\WideSearchShould.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
